# simple-tracking

./: .gitignore  README.md  pyproject.toml  setup.py
active_adaptation/: __init__.py
active_adaptation/envs/: __init__.py  base.py
active_adaptation/envs/mdp/: __init__.py
active_adaptation/envs/mdp/actions/: __init__.py  base.py  joint_position.py
active_adaptation/envs/mdp/commands/: __init__.py  base.py
active_adaptation/envs/mdp/observations/: __init__.py  amp.py  base.py  common.py  priv_body.py
active_adaptation/envs/mdp/randomizations/: base.py  common.py
active_adaptation/envs/mdp/rewards/: __init__.py  base.py  common.py  feet.py
active_adaptation/envs/mdp/terminations/: __init__.py  base.py  common.py
active_adaptation/envs/mdp/utils/: forces.py  registry.py
active_adaptation/envs/tasks/: __init__.py
active_adaptation/envs/tasks/hdmi/: __init__.py  command.py  (+4 more)
active_adaptation/learning/modules/: distributions.py  ensemble.py
active_adaptation/learning/ppo/: __init__.py  common.py  ppo_amp.py  ppo_roa.py
active_adaptation/learning/utils/: amp_obs_buf.py  replay_buffer.py  valuenorm.py  vecnorm.py
active_adaptation/utils/: __init__.py  export.py  helpers.py  math.py  motion.py  torchrl.py  wandb.py
cfg/: eval.yaml  play.yaml  render.yaml  train.yaml  train_sequential.yaml
cfg/task/base/: tracking-base.yaml
patches/: mjlab_local.patch
scripts/: eval.py  eval_multiple.py  eval_run.py  helpers.py  play.py  render.py  train.py  train_sequential.py
scripts/data_process/: generate_amass_dataset.py  slice_motion_segment.py
(+9 files in other folders)
